Fix horizontal scroll.

--- a/styles/_header.pcss
+++ b/styles/_header.pcss
@@ -13,14 +13,14 @@
 
         overflow: hidden;
         position: relative;
-        size: 100vw 100vh;
+        size: 100% 100vh;
         z-index: -1;
 
         &::before {
             background-color: black;
             content: ' ';
             position: fixed 0 * * 0;
-            size: 100vw 100vh;
+            size: 100% 100vh;
             will-change: transform;
         }
     }
