--- a/styles/_variables.pcss
+++ b/styles/_variables.pcss
@@ -2,7 +2,7 @@
     --navbar-height: 60px;
     --navbar-link-padding-side: 12px;
     --navbar-underline-width: 3px;
-    --sidebar-width: 300px;
+    --sidebar-width: 270px;
 
     --body-padding: 16px;
     --body-width: 736px;
